# test-pyright-dataclasses-attrs

./: main.py  pyproject.toml
